nks_kr_test-imqa_a2bda096-9221-4e89-94a9-593ccc15c045/test/ingress/test-imqa-alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-port: "31300"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-certificate-no: "47914"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/target-type: instance
spec:
  defaultBackend:
    service:
      name: imqa-web
      port:
        number: 3301
  ingressClassName: alb
  rules:
  - host: test-imqa.imqa.io
    http:
      paths:
      - backend:
          service:
            name: imqa-web
            port:
              number: 3301
        path: /api/auth
        pathType: Prefix
      - backend:
          service:
            name: api
            port:
              number: 8000
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: api
            port:
              number: 8000
        path: /graphql
        pathType: Prefix
      - backend:
          service:
            name: api
            port:
              number: 8000
        path: /assets
        pathType: Prefix
      - backend:
          service:
            name: keycloak
            port:
              number: 8080
        path: /realms
        pathType: Prefix
      - backend:
          service:
            name: keycloak
            port:
              number: 8080
        path: /resources
        pathType: Prefix
      - backend:
          service:
            name: keycloak
            port:
              number: 8080
        path: /admin
        pathType: Prefix
      - backend:
          service:
            name: api
            port:
              number: 8000
        path: /docs
        pathType: Prefix
      - backend:
          service:
            name: imqa-web
            port:
              number: 3301
        path: /
        pathType: Prefix
      - backend:
          service:
            name: imqa-web
            port:
              number: 3301
        path: /_next
        pathType: Prefix
      - backend:
          service:
            name: api
            port:
              number: 8000
        path: /auth
        pathType: Prefix
  - host: test-collector.imqa.io
    http:
      paths:
      - backend:
          service:
            name: otel-collector
            port:
              number: 4318
        path: /
        pathType: Prefix
  - host: sso.imqa.io
    http:
      paths:
      - backend:
          service:
            name: sso-keycloak
            port:
              number: 8080
        path: /
        pathType: Prefix
